--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
 }
 
 .animate-fade-in {
-  animation: fadeIn 1s ease-out;
+  animation: fadeIn 0.8s ease-out forwards;
 }
 
 .animate-fade-in-delay {
