--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
 @import "tailwindcss";
 @import "./styles/animations.css";
 
-/* Arabic Font Configuration */
+/* Cairo Font Configuration */
 * {
-  font-family: 'Tajawal', 'Cairo', 'Amiri', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Cairo', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 /* Arabic Text Direction and Spacing */
 body {
-  font-family: 'Tajawal', 'Cairo', 'Amiri', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Cairo', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   direction: rtl;
   text-align: right;
   line-height: 1.7;
@@ -133,17 +133,29 @@ button, .btn, a {
 
 /* Form Elements */
 input, textarea, select {
+  font-family: 'Cairo', sans-serif;
   text-align: right;
   direction: rtl;
 }
 
 /* Card and Component Styling */
 .card, .card-content, .card-header, .card-title, .card-description {
-  font-family: 'Tajawal', sans-serif;
+  font-family: 'Cairo', sans-serif;
 }
 
 /* Navigation and Menu Items */
 nav, .nav, .menu, .navbar {
+  font-family: 'Cairo', sans-serif;
+}
+
+/* Headings */
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Cairo', sans-serif;
+  font-weight: 700;
+}
+
+/* Paragraphs and Text */
+p, span, div, label {
   font-family: 'Cairo', sans-serif;
 }
 
