--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,13 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
 }
+input[type="date"].hide-placeholder::-webkit-datetime-edit {
+  color: transparent;
+}
+
+input[type="date"].hide-placeholder:focus::-webkit-datetime-edit {
+  color: black;
+}
 
 :root {
   --radius: 0.625rem;
